deployCode/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Blood_Group__c</fullName>
        <label>Blood Group</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A+</fullName>
                </value>
                <value>
                    <fullName>B+</fullName>
                </value>
                <value>
                    <fullName>AB+</fullName>
                </value>
                <value>
                    <fullName>AB-</fullName>
                </value>
                <value>
                    <fullName>O+</fullName>
                </value>
                <value>
                    <fullName>O-</fullName>
                </value>
                <value>
                    <fullName>B-</fullName>
                </value>
                <value>
                    <fullName>A-</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Diseases__c</fullName>
        <label>Diseases</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Diabetes</fullName>
                </value>
                <value>
                    <fullName>Tuberculosis</fullName>
                </value>
                <value>
                    <fullName>Liver Disease</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Languages__c</fullName>
        <label>Languages</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Passport__c</fullName>
        <label>Passport</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tour_Package__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tour Package</label>
        <referenceTo>Tour_Packages__c</referenceTo>
        <relationshipLabel>Customers</relationshipLabel>
        <relationshipName>Customers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Visa__c</fullName>
        <label>Visa</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>upload_prescription__c</fullName>
        <label>upload prescription</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
</CustomObject>